lab1/Test/L1-A-13-73.output
Error Type A at Line 2
Error Type B at Line 2
Error Type B at Line 12
Error Type B at Line 40
